<resources>
    <string name="app_name">ItStore</string>

    <string name="default_db">No data in a database, add products</string>
    <string name="sale">Sale</string>
    <string name="details">Details</string>
    <string name="order">Order</string>
    <string name="add">Add</string>
    <string name="product_name">Product Name:</string>
    <string name="price">Price: </string>
    <string name="supplier_name">Supplier Name:</string>
    <string name="supplier_phone">Supplier Phone:</string>
    <string name="quantity">Quantity: </string>
    <string name="name">Name</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
</resources>
