<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical">

        <include layout="@layout/app_bar"/>

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <EditText
                android:id="@+id/product_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/product_name">

            </EditText>

            <EditText
                android:id="@+id/price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/price">

            </EditText>

            <EditText
                android:id="@+id/supplier_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/supplier_name">

            </EditText>

            <EditText
                android:id="@+id/supplier_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:hint="@string/supplier_phone">

            </EditText>

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/quantity"
                android:paddingTop="10dp"
                android:textSize="16sp"
                android:paddingBottom="10dp"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/increment"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:text="+"
                    android:textColor="@android:color/white"
                    android:background="@color/colorAccent"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:textSize="22sp"
                    android:text="0"/>

                <Button
                    android:id="@+id/decrement"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:text="-"
                    android:textColor="@android:color/white"
                    android:background="@color/colorAccent"
                    android:textSize="20sp"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/save"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textColor="@android:color/white"
        android:background="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/save"/>
</android.support.constraint.ConstraintLayout>