<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/app_bar"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:text="@string/name"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:textSize="14sp"
                    android:layout_height="wrap_content"
                    android:text="@string/price" />

                <TextView
                    android:id="@+id/price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/price"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:text="@string/supplier_name" />

                <TextView
                    android:id="@+id/supplier_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/supplier_name"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:text="@string/supplier_phone" />

                <TextView
                    android:id="@+id/supplier_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/supplier_phone"
                    android:textSize="14sp" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/quantity"
        android:paddingLeft="12dp"
        android:paddingBottom="40dp"
        app:layout_constraintBottom_toTopOf="@id/order"
        android:id="@+id/quantity"/>

    <Button
        android:id="@+id/increment"
        android:layout_width="40dp"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="20dp"
        android:background="@color/colorAccent"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@id/order"
        app:layout_constraintLeft_toRightOf="@id/quantity"
        android:layout_height="40dp"
        android:text="+"/>

    <TextView
        android:id="@+id/quantity_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/order"
        app:layout_constraintLeft_toRightOf="@id/increment"
        android:textSize="16sp"
        android:paddingLeft="12dp"
        android:paddingBottom="40dp"
        android:text="0"/>

    <Button
        android:id="@+id/decrement"
        android:layout_width="40dp"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="10dp"
        android:background="@color/colorAccent"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@id/order"
        app:layout_constraintLeft_toRightOf="@id/quantity_number"
        android:layout_height="40dp"
        android:text="-"/>

    <Button
        android:id="@+id/order"
        android:layout_width="match_parent"
        android:background="@color/colorAccent"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_height="wrap_content"
        android:text="@string/order"/>

</android.support.constraint.ConstraintLayout>